<?xml version="1.0"?>
<package format="2">
  <name>matrice_autonomy</name>
  <version>0.0.0</version>
  <description>The matrice_autonomy package</description>

  
  <maintainer email="Nein@mail.com">rosboxone</maintainer>


  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>dji_sdk</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>dji_sdk</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
